--- a/Among Us api/style.css
+++ b/Among Us api/style.css
@@ -52,11 +52,14 @@ section > h2 {
     margin-top: 3%;
     font-size: 20px;
     font-weight: 500;
+    line-height: 1.5;
 }
 
 .note {
     margin-top: 3%;
     margin-bottom: 3%;
+    color: white;
+    font-weight: bold;
 }
 
 ul {
